@@ -49,6 +49,12 @@ IDR_LISTVIEW_CONTEXT MENU
 BEGIN
     POPUP ""
     BEGIN
+        MENUITEM "&Delete", ID_LISTVIEW_DELETE
+        MENUITEM SEPARATOR
+        MENUITEM "Copy &Title", ID_LISTVIEW_COPY_TITLE
+        MENUITEM "Copy &Path", ID_LISTVIEW_COPY_PATH
+        MENUITEM "Copy YouTube &URL\tCtrl+C", ID_LISTVIEW_COPY_URL
+        MENUITEM SEPARATOR
         MENUITEM "Select &All\tCtrl+A", ID_LISTVIEW_SELECTALL
     END
 END
@@ -64,6 +70,7 @@ BEGIN
     "V", ID_EDIT_PASTE, VIRTKEY, CONTROL
     "A", ID_EDIT_SELECTALL, VIRTKEY, CONTROL
     VK_F1, ID_HELP_ABOUT, VIRTKEY
+    VK_DELETE, ID_LISTVIEW_DELETE, VIRTKEY
 END
 
 IDD_MAIN_DIALOG DIALOGEX 0, 0, 550, 450
