@@ -109,6 +109,10 @@
 
 // ListView context menu
 #define IDR_LISTVIEW_CONTEXT   108
-#define ID_LISTVIEW_SELECTALL  2020
+#define ID_LISTVIEW_DELETE     2020
+#define ID_LISTVIEW_COPY_TITLE 2021
+#define ID_LISTVIEW_COPY_PATH  2022
+#define ID_LISTVIEW_COPY_URL   2023
+#define ID_LISTVIEW_SELECTALL  2024
 
 #endif // RESOURCE_H
