@@ -3,7 +3,16 @@
 User Interface:
 - Add column header sorting to cache ListView: click Title, Duration, or File Size to sort
 - Implement toggle between ascending and descending sort order on repeated column clicks
-- Add right-click context menu to cache ListView with "Select All - Ctrl+A" option
+- Add comprehensive right-click context menu to cache ListView with Delete, Copy operations, and Select All
+- Add Delete key (Del) accelerator for deleting selected cache entries
+- Add Ctrl+C accelerator for copying YouTube URL from selected cache entry
+- Implement dynamic Edit menu modification when ListView has focus
+- Add "Delete", "Copy Title", "Copy Path", and "Copy YouTube URL" to Edit menu for keyboard accessibility
+- Enable/disable menu items based on ListView selection state
+- Implement ID_LISTVIEW_COPY_TITLE handler to copy video title to clipboard
+- Implement ID_LISTVIEW_COPY_PATH handler to copy file path to clipboard
+- Implement ID_LISTVIEW_COPY_URL handler to copy reconstructed YouTube URL to clipboard
+- Implement ID_LISTVIEW_DELETE handler to trigger delete operation via Delete button
 - Fix ListView sorting to use ListView_SortItems for proper lParam handling
 - Refactor Select All functionality to use new SelectAllListViewItems helper function
 
